[gd_scene load_steps=5 format=2]

[ext_resource path="res://gfx/npc/npc1.png" type="Texture" id=1]
[ext_resource path="res://scenes/npc/npc.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5, 6.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5, 34 )

[node name="npc" type="Node2D"]
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.5, 23.5 )
shape = SubResource( 1 )

[node name="speak" type="Label" parent="."]
margin_left = -81.0
margin_top = -49.0
margin_right = 78.0
margin_bottom = -35.0
align = 1

[node name="speakTimer" type="Timer" parent="speak"]
one_shot = true

[node name="sight_line" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sight_line"]
position = Vector2( -0.5, 52 )
shape = SubResource( 2 )

[connection signal="timeout" from="speak/speakTimer" to="." method="_on_speakTimer_timeout"]
[connection signal="body_entered" from="sight_line" to="." method="_on_sight_line_body_entered"]
[connection signal="body_exited" from="sight_line" to="." method="_on_sight_line_body_exited"]
